--- a/pom.xml
+++ b/pom.xml
@@ -118,4 +118,24 @@
         </plugins>
     </build>
 
+    <!-- CI\CD профиль -->
+    <profiles>
+        <profile>
+            <id>github</id>
+            <activation>
+                <property>
+                    <name>useGitHubPackages</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <distributionManagement>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub Packages</name>
+                    <url>https://maven.pkg.github.com/AlNat/todoit_types</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+
 </project>
